# Camera-Drop

./: .gitmodules  CMakeLists.txt
model/: args.yaml  results.csv
pattern_finder/: eval_patterns.cpp  select_patterns.py
pattern_finder/best/: meta.json
src/: test.cpp
src/codec/: Decoder.hpp  Encoder.hpp  fountain_code.hpp  interleaver.hpp  reed_solomon.hpp
src/compression/: ZstdCompressor.hpp
src/data/: data_block.hpp
src/encode/: fountain_code.hpp
src/image/: constants.hpp  img_writer.hpp  painter.hpp  patterns.hpp  tile.hpp
src/misc/: anchor_scanner.cpp  config_acc_test.cpp
src/test/: test_codec.cpp  test_img_writer.cpp
src/util/: ArgParser.hpp  BitConverter.hpp  DataPacket.hpp  ZstdCompressor.hpp  config.hpp  errors.hpp  file.hpp
train/: export.py  gen_data.py  train.py
web/: index.html
